change the close modal button, fixed the bug with the greeting not showing up when editing a campaign

--- a/src/components/Buttons/Buttons.scss
+++ b/src/components/Buttons/Buttons.scss
@@ -5,6 +5,7 @@
 
     &--close-modal {
       cursor: pointer;
+      color: rgba(84, 144, 137, 1);
     }
 
     &--delete {
